bk_ida/gccida/c1/peephole2_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56260:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56266:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v6.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56267:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6.rtwint = ( __int64)x0[1]; 
                      ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56270:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v6.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56279:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1246( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56289:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v6.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56290:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6.rtwint = ( __int64)x0[1]; 
                      ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56301:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1249( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56309:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v6.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56320:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1252( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56325:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v6.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56326:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6.rtwint = ( __int64)x0[1]; 
                      ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56329:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v6.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56338:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1245( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56348:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v6.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56349:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6.rtwint = ( __int64)x0[1]; 
                      ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56360:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1248( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56368:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v6.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/insn-recog.c:56379:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1251( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/peephole2_1/src/obj/insn-recog.o] Error 1
